--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 @media only screen and (max-width: 768px) {
 
 	.caption-marquee {
-		padding: 6px 14px;
+		padding: 6px 14px 0;
 		font-size: 10px;		
 		border-top-width: 3px;
 		bottom: 2px;
@@ -58,7 +58,7 @@
 		margin-left: 0 !important;
 	}
 	.caption-marquee {
-		padding: 4px 10px;
+		padding: 4px 10px 0;
 		font-size: 8px;		
 		border-top-width: 1px;
 		bottom: 0;
