--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 	background-color: #263238;
 	position: absolute;
 	padding: 10px 20px;	
-	border-top: 4px solid #90A4AE;
+	border-top: 4px solid #FFF;
 	width: 100%;
 	bottom: 4px;
 }
